--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,42 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Testing
+coverage/
+
+# SSL certificates
+certificates/
+
+# Database
+*.sqlite
+*.sqlite3
 
 # Python cache files
 __pycache__/
@@ -19,12 +51,6 @@ healthcare_debug.log
 # Cookies and session files
 cookies.txt
 *.session
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
 
 # Python
 venv/
