--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/pg": "^8.11.13",
     "@types/tough-cookie": "^4.0.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -84,6 +85,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
+    "react-router-dom": "^7.5.1",
     "react-spring": "^9.7.5",
     "react-tinder-card": "^1.6.4",
     "recharts": "^2.15.1",
@@ -98,14 +100,14 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
+    "@types/express-session": "^1.18.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.17.30",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
