--- a/package.json
+++ b/package.json
@@ -103,15 +103,19 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.1",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.17.30",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/testing-library__react": "^10.0.1",
     "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
@@ -130,7 +134,7 @@
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.3.2",
     "tsx": "^4.19.3",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
