--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/pg": "^8.11.13",
     "@types/tough-cookie": "^4.0.5",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
