--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.39.1",
+    "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "fetch-cookie": "^3.1.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^11.18.2",
     "graphql": "^16.10.0",
     "input-otp": "^1.2.4",
@@ -79,7 +80,7 @@
     "openai": "^4.90.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.14.1",
+    "pg": "^8.15.6",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
