--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,43 @@
 # Dependencies
 node_modules/
-.pnp/
-.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
-# Build outputs
+# Build output
 dist/
 build/
+*.tsbuildinfo
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Logs
+logs/
+*.log
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+
+# PnP
+.pnp/
+.pnp.js
+
+# Build outputs
 .next/
 out/
 
@@ -44,7 +69,6 @@ __pycache__/
 *$py.class
 
 # Debug logs
-*.log
 education_income_debug.log
 healthcare_debug.log
 
