--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/bcrypt": "^5.0.2",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.13",
     "@types/tough-cookie": "^4.0.5",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
@@ -62,6 +64,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
@@ -72,14 +75,13 @@
     "express-session": "^1.18.1",
     "fetch-cookie": "^3.1.0",
     "firebase": "^11.6.1",
-    "framer-motion": "^11.18.2",
-    "graphql": "^16.10.0",
+    "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.9.4",
     "input-otp": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "openai": "^4.90.0",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
@@ -108,14 +110,10 @@
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20.17.30",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/testing-library__react": "^10.0.1",
