--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/express": "4.17.21",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20.17.30",
