--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
+    "client": "vite --config vite.config.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -54,6 +55,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/next": "^8.0.7",
     "@types/pg": "^8.11.13",
     "@types/tough-cookie": "^4.0.5",
     "axios": "^1.9.0",
@@ -81,6 +83,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "next": "^15.3.1",
     "openai": "^4.90.0",
     "pg": "^8.15.6",
     "postgres": "^3.4.5",
