--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
@@ -81,6 +82,7 @@
     "framer-motion": "^12.9.4",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next": "^15.3.1",
