Implement flexible LLM summary architecture, swipe game response recording, and refactor summary UI

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tough-cookie": "^5.1.2",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
